Fixed layout on small screen

--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -9,11 +9,27 @@
   }
 }
 
+@media (min-width: 1600px) {
+  .latestEpisodes{
+    ul{
+      grid-template-columns: 1fr 1fr;
+    }
+  }
+}
+
+@media (max-width: 1599px) {
+  .latestEpisodes{
+    ul{
+      grid-template-columns: 1fr;
+    }
+  }
+}
+
 .latestEpisodes{
+  
   ul{
     list-style: none;
     display: grid;
-    grid-template-columns: 1fr 1fr;
     gap: 1.5rem;
 
     li{
